--- a/code.ipynb
+++ b/code.ipynb
@@ -451,14 +451,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['filmtv_id', 'title', 'year', 'genre', 'duration', 'country',\n",
+      "       'directors', 'actors', 'avg_vote', 'critics_vote', 'public_vote',\n",
+      "       'total_votes', 'humor', 'rhythm', 'effort', 'tension', 'erotism'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "# # Draw a plot to show total movies released in each year and by country\n",
-    "# plt.figure(figsize=(15, 8))\n",
-    "# sns.countplot(x='year', hue='country', data=df)\n",
-    "# plt.show()"
+    "print(df.columns)"
    ]
   },
   {
